ubiquity (1.9.11) UNRELEASED; urgency=low

  * Add a graphical partition bar to the advanced partitioning page.

 -- Evan Dandrea <evand@ubuntu.com>  Tue, 26 Aug 2008 10:21:43 -0400

ubiquity (1.9.10) intrepid; urgency=low

  [ Harald Sitter ]
  * Ensure that the KDE frontend is using Oxygen icons

  [ Mario Limonciello ]
  * Mythbuntu Frontend:
    - Update debconf strings for summary template page.
    - Hide the mainline Ubiquity autologin option.
    - Hide the installer UI while MythTV setup is running.
    - Remove mythtv-status from Frontend installs.

  [ Colin Watson ]
  * GTK frontend:
    - Fix widget/method name clash that broke the Quit button (LP: #257962).
    - Hide auto-login option in OEM mode, since it will be offered later in
      a less confusing context (LP: #257606).
  * Automatic update of included source packages: base-installer
    1.86ubuntu4, partman-efi 17ubuntu2, partman-partitioning 59ubuntu4,
    partman-target 55ubuntu3, user-setup 1.20ubuntu5.

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 22 Aug 2008 16:52:54 +0100

ubiquity (1.9.9) intrepid; urgency=low

  * Explicitly remove etc/fstab from the list of files to be copied over.
    It is created from partman prior to file copy, so the recent commit 
    to unlink files if they exist already is remvoing it. (LP: #257580)

 -- Mario Limonciello <superm1@ubuntu.com>  Wed, 13 Aug 2008 14:30:41 -0500

ubiquity (1.9.8) intrepid; urgency=low

  [ Mario Limonciello ]
  * Remove xmltv and dvbutils options, as they will be installed across
    all boxen now.
  * debian/control:
    - Drop depends for guidance on mythbuntu package.
  * Install custom mythbuntu recipe - only applicable for Mythbuntu
    frontend.
  * Add support for additional mythbuntu plugin, apple trailers.

  [ Colin Watson ]
  * When copying files, remove regular files and symlinks if they exist
    already on the target; this can happen legitimately if installing over
    an existing system and /boot wasn't erased.